--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "haruncpi/laravel-id-generator": "^1.1",
         "laravel/framework": "^8.0",
+        "laravel/passport": "^10.4",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.0",
         "maatwebsite/excel": "^3.1",
